--- a/css/style.css
+++ b/css/style.css
@@ -1143,6 +1143,7 @@ button[type="submit"] i {
 
 /* PLAY NOW */
 .play-now {
+  opacity:0;
   position: relative;
   width: 340px;
   height: 340px;
@@ -1393,7 +1394,7 @@ video {
 }
 
 /* RESPONSIVE MEDIUM  */
-@media only screen and (max-width: 1199px), only screen and (max-device-width: 1199px) {
+@media only screen and (max-width: 1250px), only screen and (max-device-width: 1250px) {
 
   .slider .slider-texts .swiper-slide h1 {
     font-size: 92px;
@@ -1401,10 +1402,6 @@ video {
 
   .navbar .site-menu ul li {
     margin: 0 10px;
-  }
-
-  .play-now {
-    left: 60%;
   }
 
   .page-header .inner h1 {
@@ -1696,6 +1693,16 @@ video {
     margin-bottom: 50px;
   }
 }
+@media only screen and (max-width: 1130px), only screen and (max-device-width: 1130px) {
+  .play-now {
+    left: 36%;
+  }
+}
+@media only screen and (max-width: 900px), only screen and (max-device-width: 900px) {
+  .play-now {
+    left: 33%;
+  }
+}
 /* RESPONSIVE MOBILE */
 @media only screen and (max-width: 767px), only screen and (max-device-width: 767px) {
   .preloader {
@@ -1795,6 +1802,10 @@ video {
   .page-header .inner p {
     font-size: 17px;
     padding-right: 0;
+  }
+  
+  .play-now {
+    left: 30%;
   }
 
   .section-title {
@@ -2022,6 +2033,37 @@ video {
     width: 100%;
   }
 }
+@media only screen and (max-width: 620px), only screen and (max-device-width: 620px) {
+  .play-now {
+    left: 24%;
+  }
+}
+@media only screen and (max-width: 500px), only screen and (max-device-width: 500px) {
+  .play-now {
+    left: 18%;
+  }
+}
+@media only screen and (max-width: 450px), only screen and (max-device-width: 450px) {
+  .play-now {
+    left: 12%;
+  }
+}
+@media only screen and (max-width: 415px), only screen and (max-device-width: 415px) {
+  .play-now {
+    left: 7%;
+  }
+}
+@media only screen and (max-width: 380px), only screen and (max-device-width: 380px) {
+  .play-now {
+    left: 6%;
+  }
+}
+@media only screen and (max-width: 330px), only screen and (max-device-width: 330px) {
+  .play-now {
+    left: -3%;
+  }
+}
+
 /* ANIMATIONS */
 @-webkit-keyframes rotate {
   from {
